|
Quick Lists
|
|
Bug ID:
|
6667620
|
|
Votes
|
0
|
|
Synopsis
|
Escape Analysis: fix reallocation and relocking scalar replaced objects during deoptimization
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs12(b02)
|
|
State
|
10-Fix Delivered,
request for enhancement
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6672848
|
|
Submit Date
|
26-FEB-2008
|
|
Description
|
Fix currently broken deoptimization code for reallocation and relocking
scalar replaced objects.
Posted Date : 2008-02-26 01:56:57.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See description.
Posted Date : 2008-03-12 00:05:25.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |