6667620: (Escape Analysis) fix deoptimization for scalar replaced objects

Deoptimization code for reallocation and relocking scalar replaced objects has to be fixed.

Reviewed-by: rasbold, never